adjust setup to make heroku build pass with monorepo
